--- a/Weitianshi/pages/myProject/initPrivacy/initPrivacy.wxml
+++ b/Weitianshi/pages/myProject/initPrivacy/initPrivacy.wxml
@@ -15,7 +15,7 @@
   </view>
   <view class="choiceBox flex">
     <view class="content">隐藏公司信息</view>
-    <switch checked bindchange="switchChange4" class="switchTab" />
+    <switch  bindchange="switchChange4" class="switchTab" />
   </view>
 </view>
 <view class="tips flex">
@@ -28,21 +28,21 @@
     <view class="box">
       <view class="whiteContent">一线投资机构（清科2016年度中国股权投资排行榜前30）投资人，无需申请，直接查看项目信息、BP</view>
     </view>
-    <switch checked bindchange="whiteCompany" class="switchTab" />
+    <switch  bindchange="whiteCompany" class="switchTab"  />
   </view>
   <view class="choiceBox flex">
     <view class="box">
       <view class="whiteContent">平台认证投资机构总监级别以上用户，无需申请，直接查看项目信息、BP</view>
     </view>
-    <switch checked bindchange="whiteUser" class="switchTab" />
+    <switch  bindchange="whiteUser" class="switchTab" />
   </view>
 </view>
 <view class="blackNameList">
   <view class="blackName">黑名单设置</view>
     <view class="blackTips blackTips1">针对一下投资机构,屏蔽项目展示</view>
-    <input class="inputBox" bindinput="blackCompany" />
+    <input class="inputBox" bindinput="blackCompany" maxlength="500"/>
     <view class="blackTips">针对一下用户,屏蔽项目显示</view>
-    <input class="inputBox"  bindinput="blackUser" />
+    <input class="inputBox"  bindinput="blackUser" maxlength="500"/>
 </view>
 <view class="highBox"></view>
 <template is="buttonOne" data="{{text:'保存',btnName:'saveInitPrivacy'}}"></template>
