--- a/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
+++ b/Weitianshi/pages/my/investCaseEdit/investCaseEdit.wxml
@@ -11,7 +11,7 @@
 
   <view class="card">
     <view class="text">项目轮次*</view>
-    <picker class="card_case" bindchange="case_stage" value="{{stage_index}}" range="{{stage}}">
+    <picker class="card_case" bindchange="case_stage" value="{{case_stage_id}}" range="{{stage}}">
       {{case_stage_name||stage[stage_index]}}
     </picker>
   </view>
@@ -27,7 +27,7 @@
   </view>
   <view class="card">
     <view class="text">投资地区*</view>
-       <view class="card_case" id="case_local" bindtap="case_local">{{belongArea.belongArea||"请选择"}}</view>
+       <view class="card_case" id="case_local" bindtap="case_local">{{belongArea.area_title||"请选择"}}</view>
   </view>
 </view>
 <view style="height:118rpx;"></view>
