--- a/Weitianshi/pages/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxml
@@ -311,8 +311,8 @@
   <view class="pushing" wx:if="{{button_type == 0}}">申请中</view>
 </view>
 
-<view class=" flex floatBtn flexBox">
-  <view class="collectBox" bindtap="collectProject">
+<view class=" flex floatBtn flexBox" wx:if="{{button_type == 1}}">
+  <view class="collectBox" bindtap="collectProject"  >
     <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
   </view>
   <view class="contactProject" bindtap="contactPerson">联系项目方</view>
@@ -334,4 +334,4 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 
 <!--项目打分  -->
-<view class="remark" bindtap="projectRemark">项目打分</view>
+<!-- <view class="remark" bindtap="projectRemark">项目打分</view> -->
