--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -954,7 +954,7 @@
 
 <!--投资人卡片  -->
 <template name="InvestorCard">
-  <view class="t-outsideBox" data-id="{{item.investor_id}}" catchtap="userDetail">
+  <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
     <view class="t-applyMyProject t-contacts-detailm">
       <view class="t-introduceBox flex">
         <view class="t-userName">{{item.investor_name}}</view>
