--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -7,6 +7,8 @@
 <template is='search' data='{{SearchInit}}'></template>
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
+ <!--模态层  -->
+    <view class='t-modal' wx:if='{{SearchInit.currentIndex!=5}}' bindtap='modal'></view>
   <!--精选  -->
   <swiper-item data-current='0'>
     <!--banner轮播  -->
@@ -23,21 +25,17 @@
     </scroll-view>
     <!--空状态-->
     <image class="empty" src="/img/empty.png" wx:if="{{myProject==''}}"></image>
-    <!--模态层  -->
-    <view class='t-modal' wx:if='{{SearchInit.currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
   <!--最新 -->
   <swiper-item data-current='1'>
     <!--项目展示  -->
-    <scroll-view scroll-y="true" bindscrolltolower="financingNeed">
+    <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
       <template is="selectProject" data="{{list:financingNeed,type:2}}"></template>
     </scroll-view>
     <!--空状态-->
     <view wx:if="{{financingNeed==''}}">
       <image class="empty" src="/img/img-wujieguo@3x.png"></image>
     </view>
-    <!--模态层  -->
-    <view class='t-modal' wx:if='{{SearchInit.currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
 </swiper>
 <!--创建项目引导  -->
