--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxss
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxss
@@ -1,5 +1,7 @@
 page {
   background: #f3f4f8;
+  overflow: hidden;
+  height: 100%;
 }
 
 .blueTop {
@@ -30,7 +32,7 @@ page {
 }
 
 .scroll {
-  height: 100%;
+  height: 900rpx;
   width: 686rpx;
   margin: auto;
   margin-top: 82rpx;
@@ -111,6 +113,11 @@ page {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.industryArr, .otherTag{
+  font-size: 24rpx;
+  color: #666;
+  padding: 10rpx 40rpx;
+}
 .publish {
   border-radius: 4rpx;
   width: 46rpx;
@@ -119,6 +126,7 @@ page {
   font-size: 18rpx;
   line-height: 28rpx;
   text-align: center;
+  float: right;
 }
 
 .ProjectDetailInfo {
@@ -128,6 +136,13 @@ page {
   height: 28rpx;
   padding-top: 38rpx;
   color: #ccc;
+}
+.ProjectDetailInfo .viewTimeNew{
+  position: absolute;
+  color: #f44c4c;
+  top: -12rpx;
+  right: 25rpx;
+  font-size:18rpx;
 }
 
 .sceenPerson, .applyPerson, .investPerson {
