--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -2,7 +2,7 @@
 <view class="swiper-tab">
   <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">投资人</view>
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">FA(融资顾问)</view>
-  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">我的</view>
+  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">我的人脉</view>
 </view>
 <!--筛选和搜索  -->
 <template is='search' data='{{SearchInit}}'></template>
@@ -40,70 +40,7 @@
   </swiper-item>
   <!--我的  -->
   <swiper-item data-current='2'>
-    <scroll-view scroll-y="true" bindscrolltolower="loadMore">
-      <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
-        <view class="t-myContactsCard  contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
-          <view class="user_info flex">
-            <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-            <image class="user_pic" src="{{item.user_avatar_url}}" wx:if="{{item.user_avatar_url}}"></image>
-            <view class="user_info_right">
-              <view class="flex frame">
-                <view class="name_flex flex">
-                  <view class="user_name">{{item.user_real_name}}</view>
-                  <view class="user_career">{{item.user_company_career}}</view>
-                </view>
-                <label class="telephoneLab telephonem" data-telephone="{{item.user_mobile}}" catchtap="telephone">
-                  <image class="telephone" src="/img/icon-phone@3x.png"></image>
-                </label>
-              </view>
-              <view class="user_company" wx:if="{{item.user_company_name !=''}}">{{item.user_company_name}}</view>
-            </view>
-          </view>
-          <view class="investor_info">
-
-            <!--投资领域-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
-              <view class="investor_text">投资领域:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_invest_industry}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
-                  <view class="industry" hidden="{{index>3}}">{{industry.industry_name}}</view>
-                </block>
-              </view>
-            </view>
-
-            <!--投资轮次-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
-              <view class="investor_text">投资轮次:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_invest_stage}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
-                  <view class="stage">{{stage.stage_name}}</view>
-                </block>
-              </view>
-            </view>
-
-            <!--拥有资源-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
-              <view class="investor_text">寻求资源:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_resource_find}}" wx:for-item="res_find" wx:key="{{res_find.resource_id}}">
-                  <view class="res_find">{{res_find.resource_name}}</view>
-                </block>
-              </view>
-            </view>
-
-            <!--寻求资源-->
-            <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
-              <view class="investor_text">拥有资源:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_resource_give}}" wx:for-item="res_give" wx:key="{{res_give.resource_id}}">
-                  <view class="res_give">{{res_give.resource_name}}</view>
-                </block>
-              </view>
-            </view>
-          </view>
-        </view>
-      </block>
-    </scroll-view>
+    <template is='myContacts' data='{{contacts}}'></template>
     <!--空状态-->
     <view wx:if="{{empty == 1}}">
       <view class="nullState" wx:if="{{contacts=='' || !contacts}}">
@@ -122,3 +59,72 @@
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <!--找项目投资人浮票  -->
 <view class="t-competitor" bindtap="matchInvestor">找项目投资人</view>
+
+<!---------------------------------------------------------------------------->
+<!--我的人脉  -->
+<template name='myContacts'>
+  <scroll-view scroll-y="true" bindscrolltolower="loadMore">
+    <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
+      <view class="t-myContactsCard  contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
+        <view class="user_info flex">
+          <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+          <image class="user_pic" src="{{item.user_avatar_url}}" wx:if="{{item.user_avatar_url}}"></image>
+          <view class="user_info_right">
+            <view class="flex frame">
+              <view class="name_flex flex">
+                <view class="user_name">{{item.user_real_name}}</view>
+                <view class="user_career">{{item.user_company_career}}</view>
+              </view>
+              <label class="telephoneLab telephonem" data-telephone="{{item.user_mobile}}" catchtap="telephone">
+                <image class="telephone" src="/img/icon-phone@3x.png"></image>
+              </label>
+            </view>
+            <view class="user_company" wx:if="{{item.user_company_name !=''}}">{{item.user_company_name}}</view>
+          </view>
+        </view>
+        <view class="investor_info">
+
+          <!--投资领域-->
+          <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
+            <view class="investor_text">投资领域:</view>
+            <view class="investor_right flex">
+              <block wx:for="{{item.user_invest_industry}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
+                <view class="industry" hidden="{{index>3}}">{{industry.industry_name}}</view>
+              </block>
+            </view>
+          </view>
+
+          <!--投资轮次-->
+          <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
+            <view class="investor_text">投资轮次:</view>
+            <view class="investor_right flex">
+              <block wx:for="{{item.user_invest_stage}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
+                <view class="stage">{{stage.stage_name}}</view>
+              </block>
+            </view>
+          </view>
+
+          <!--拥有资源-->
+          <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
+            <view class="investor_text">寻求资源:</view>
+            <view class="investor_right flex">
+              <block wx:for="{{item.user_resource_find}}" wx:for-item="res_find" wx:key="{{res_find.resource_id}}">
+                <view class="res_find">{{res_find.resource_name}}</view>
+              </block>
+            </view>
+          </view>
+
+          <!--寻求资源-->
+          <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
+            <view class="investor_text">拥有资源:</view>
+            <view class="investor_right flex">
+              <block wx:for="{{item.user_resource_give}}" wx:for-item="res_give" wx:key="{{res_give.resource_id}}">
+                <view class="res_give">{{res_give.resource_name}}</view>
+              </block>
+            </view>
+          </view>
+        </view>
+      </view>
+    </block>
+  </scroll-view>
+</template>
