--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -1310,3 +1310,811 @@ margin-top: 72rpx;
   border-radius: 35rpx 0 0 35rpx;
   padding-right: 28rpx;
 }
+/*項目詳情全部  */
+.swiper-tab {
+  width: 100%;
+  text-align: center;
+  line-height: 80rpx;
+  background: #fff;
+  /*border-bottom: 1rpx solid #e6e6e6;*/
+}
+
+.swiper-tab-list {
+  display: inline-block;
+  width: 33.3%;
+  font-size: 26rpx;
+  color: #40587a;
+  line-height: 62rpx;
+  text-align: center;
+}
+      
+.on {
+  color: #40587a;
+  border-bottom: 4rpx solid #40587a;
+}
+#projectBox .brightContent {
+  /* height: 72rpx; */
+  font-size: 26rpx;
+  color: #666;
+  line-height: 39rpx;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+#projectBox .brightContentAfter {
+  height: auto;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 39rpx;
+  text-align: left;
+}
+
+#projectBox  .pro_sort {
+  font-size: 20rpx;
+  color: #40587a;
+  border-radius: 98rpx;
+  border: 1rpx solid #40587a;
+  text-align: center;
+  height: 44rpx;
+  width: auto;
+  line-height: 44rpx;
+  padding: 0 16rpx;
+  margin-right: 24rpx;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  margin-bottom: 18rpx;
+}
+
+.pro_sort_right {
+  position: absolute;
+  right: 24rpx;
+  flex-wrap: wrap;
+}
+
+.grayName {
+  font-size: 24rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  margin-right: 8rpx;
+  margin-bottom: 32rpx;
+}
+
+.grayName:last-child {
+  margin-bottom: 0;
+}
+
+.personPosition {
+  margin-top: 2rpx;
+  font-size: 22rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 24rpx;
+  text-align: left;
+}
+
+#projectBox .personInfo {
+  border-bottom: 2rpx solid #e6e6e6;
+  padding: 24rpx 0;
+}
+
+#projectBox .personInfo:first-child {
+  padding-top: 0;
+}
+
+#projectBox .personInfo:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.personInfoList {
+  margin-bottom: 16rpx;
+}
+
+#projectBox .scale {
+  font-size: 22rpx;
+  color: #40587a;
+  letter-spacing: 0;
+  line-height: 22rpx;
+  text-align: right;
+  position: absolute;
+  right: 48rpx;
+}
+
+.introduce {
+  font-size: 22rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 30rpx;
+  text-align: left;
+}
+
+.proposalFinal {
+  margin-bottom: 0;
+}
+
+.materialContent {
+  font-size: 26rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.materialWeb {
+  font-size: 26rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.whiteContent {
+  background-color: #fff;
+  border: 1rpx solid #e6e6e6;
+  border-radius: 4rpx;
+  width: 100%;
+  height: 176rpx;
+}
+
+.txtContent {
+  margin: 62rpx 0 54rpx 0;
+  width: 33.33%;
+}
+
+.textTab {
+  font-size: 22rpx;
+  color: #666;
+  line-height: 22rpx;
+  text-align: center;
+}
+
+.textNum {
+  font-size: 30rpx;
+  color: #333;
+  line-height: 30rpx;
+  text-align: center;
+}
+
+#project .purpose {
+  margin-bottom: 48rpx;
+  text-align: left;
+}
+
+.purpose .purposeTitle {
+  font-size: 24rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  margin-top: 48rpx;
+  margin-bottom: 24rpx;
+}
+
+.purpose .purposeContent {
+  font-size: 26rpx;
+  color: #666;
+  line-height: 34rpx;
+  text-align: left;
+  margin-bottom: 48rpx;
+}
+
+.case_money {
+  font-size: 26rpx;
+  color: #333;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.case_turn {
+  border-radius: 62rpx;
+  font-size: 20rpx;
+  text-align: right;
+  border: 1rpx solid #40587a;
+  padding: 2rpx;
+}
+
+.invest {
+  padding-bottom: 48rpx;
+  border-left: 1px solid #e6e6e6;
+}
+
+.invest view {
+  text-align: left;
+}
+
+.invest:last-child {
+  border: none;
+  padding: 0;
+}
+
+.investContent {
+  font-size: 22rpx;
+  color: #666;
+  line-height: 22rpx;
+  text-align: left;
+  padding-left: 32rpx;
+}
+
+.milestoneContent:last-child {
+  border-left: none;
+  padding: 0;
+  width: auto;
+  height: auto;
+}
+
+.milestoneContent {
+  border-left: 2rpx solid #e6e6e6;
+  padding-bottom: 48rpx;
+}
+
+#projectBox .case_time {
+  font-size: 24rpx;
+  color: #333;
+  line-height: 24rpx;
+  text-align: left;
+  margin-right: 48rpx;
+  width: auto;
+  margin-bottom: 20rpx;
+}
+
+.milestoneContentcase_time {
+  font-size: 24rpx;
+  color: #333;
+  line-height: 24rpx;
+  text-align: left;
+  margin-right: 48rpx;
+  width: 128rpx;
+  margin-bottom: 20rpx;
+}
+
+.case_pic {
+  margin-top: -1rpx;
+  width: 16rpx;
+  height: 16rpx;
+  margin-right: 24rpx;
+  margin-left: -7rpx;
+  z-index: 3;
+}
+
+#projectBox .case_content {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 32rpx;
+  text-align: left;
+  width: auto;
+  flex-wrap: wrap;
+}
+
+#projectBox .milestoneContentBox .case_content {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 32rpx;
+  text-align: left;
+  width: 429rpx;
+  flex-wrap: wrap;
+}
+
+#projectBox .milestoneContentBox {
+  border-left: 1rpx solid #e6e6e6;
+  padding-bottom: 48rpx;
+}
+
+#projectBox .milestoneContentBox:last-child {
+  border-left: none;
+  padding-bottom: 0;
+}
+
+.conBox {
+  margin: 56rpx 0 54rpx 0;
+  text-align: center;
+}
+
+.conBox .textFAContent {
+  width: 25%;
+}
+
+.textTab {
+  margin-bottom: 16rpx;
+}
+
+.bigBox {
+  margin: 0 32rpx 0 32rpx;
+  text-align: left;
+}
+
+#projectBox {
+  background: white;
+  padding-top: 32rpx;
+}
+
+.scale_moneyIcon {
+  width: 24rpx;
+  height: 24rpx;
+}
+
+#projectBox .teamPro {
+  margin-bottom: 48rpx;
+}
+
+/*空白页*/
+
+.nothing {
+  height: 120rpx;
+  width: 96rpx;
+  margin-top: 234rpx;
+}
+
+.hasNoFind {
+  font-size: 26rpx;
+  color: #999;
+  line-height: 30rpx;
+  text-align: center;
+  margin: 52rpx 0 32rpx 0;
+}
+
+.writeCompanyName {
+  font-size: 30rpx;
+  color: #009eff;
+  letter-spacing: 0;
+  line-height: 30rpx;
+  text-align: center;
+}
+
+/*bp模态框*/
+
+.bpModal {
+  background: #fff;
+  border-radius: 8rpx;
+  width: 570rpx;
+  height: 344rpx;
+  padding-top: 48rpx;
+  margin-left: 90rpx;
+  margin-top: 45%;
+}
+
+.modal {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.bpModalText {
+  font-size: 36rpx;
+  color: #333;
+  letter-spacing: 0;
+  line-height: 36rpx;
+  text-align: center;
+}
+
+.writeBpEmail {
+  border: 1rpx solid #ccc;
+  width: 426rpx;
+  height: 84rpx;
+  margin: 64rpx 38rpx 64rpx 40rpx;
+  padding: 0 32rpx;
+}
+
+.bpModalCancel, .bpModalSure {
+  width: 50%;
+  font-size: 32rpx;
+  color: #333;
+  letter-spacing: 0;
+  line-height: 32rpx;
+  text-align: center;
+  padding: 26rpx 0 32rpx 0;
+}
+
+.bpModalCancel {
+  border-right: 1rpx solid #e6e6e6;
+}
+
+.choiceBox {
+  border-top: 1rpx solid #e6e6e6;
+}
+
+.industryIcon {
+  margin: 0 16rpx;
+  width: 24rpx;
+  height: 24rpx;
+}
+
+.industryIcon:first-child {
+  margin-left: 0;
+}
+
+/*项目信息的展开和合并*/
+
+.moreInfo {
+  margin-top: 32rpx;
+  width: 100%;
+  height: 22rpx;
+  /*background: #fff;*/
+  font-size: 24rpx;
+  color: #009eff;
+  line-height: 24rpx;
+  text-align: center;
+}
+
+.competitorPosition {
+  font-size: 24rpx;
+  color: #999;
+  letter-spacing: 0;
+  line-height: 24rpx;
+  text-align: left;
+  margin-left: 32rpx;
+}
+
+.more {
+  color: #009eff;
+  font-size: 12px;
+}
+
+.checkEmail {
+  color: #ccc;
+}
+
+.coreMemberLeftBox {
+  width: 82rpx;
+  height: 82rpx;
+  margin-right: 14rpx;
+  border-radius: 50%;
+}
+
+.projectDetailLine {
+  padding: 0 16rpx;
+  border-right: 1rpx solid #999;
+}
+
+.projectDetailLine:first-child {
+  padding-left: 0;
+}
+
+.projectDetailLine:last-child {
+  border-right: none;
+}
+
+/* .byPass {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+} */
+
+/* 按钮的样式 */
+
+.btnPic {
+  height: 28rpx;
+  width: 28rpx;
+  margin-right: 16rpx;
+  margin-top: 30rpx;
+}
+
+.btn1 {
+  margin-left: 36rpx;
+  width: 33.5%;
+}
+
+.btn2 {
+  width: 30.5%;
+  padding-left: 45rpx;
+}
+
+#productBox {
+  background-color: #fff;
+  border-radius: 4rpx;
+  width: 91%;
+  padding: 30rpx;
+  position: relative;
+  margin-bottom: 16rpx;
+}
+
+#productBox .productTitle {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 30rpx;
+  text-align: left;
+  width: 225px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#productBox .productContent {
+  margin-top: 44rpx;
+  text-align: left;
+}
+
+#productBox .projectTips {
+  position: absolute;
+  right: 16rpx;
+  margin: 0;
+  height: 30rpx;
+  line-height: 30rpx;
+}
+
+.productContent {
+  font-size: 24rpx;
+  color: #666;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+/*删除项目  */
+
+.btn0 {
+  background: #fff;
+  width: 188rpx;
+  padding: 22rpx 0;
+}
+
+.deleteProject {
+  height: 40rpx;
+  width: 40rpx;
+}
+
+.flexBox {
+  background: #40587a;
+  height: 88rpx;
+}
+
+.collectBox {
+  background: #fff;
+  /* width: 188rpx; */
+  width: 25%;
+  height: 88rpx;
+  text-align: center;
+  line-height: 108rpx;
+}
+
+.collectPic {
+  width: 36rpx;
+  height: 36rpx;
+}
+
+.contactProject, .businessBook {
+  font-size: 28rpx;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 28rpx;
+  text-align: center;
+  background: #40587a;
+  margin: 30rpx 0;
+  border-right: 1rpx solid #e6e6e6;
+}
+
+.contactProject {
+  padding-right: 30rpx;
+}
+
+.businessBook {
+  border: none;
+}
+
+/*买家图谱  */
+
+.buyerPage {
+  background: #fff;
+  padding: 0 32rpx;
+}
+
+#introduce {
+  background: #e5e9f2;
+  border-radius: 4rpx 4rpx 0 0;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 66rpx;
+  text-align: left;
+  height: 66rpx;
+  position: relative;
+  padding: 0 32rpx;
+}
+
+.resourceBox {
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 32rpx;
+  padding-top: 0;
+}
+
+#introduce .introduce {
+  border-radius: 4rpx 4rpx 0 0;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 66rpx;
+  text-align: left;
+  height: 66rpx;
+  width: 670rpx;
+}
+
+#introduce .matchWeight {
+  font-size: 24rpx;
+  color: #fc703e;
+  text-align: left;
+}
+
+#introduce .status {
+  position: absolute;
+  top: 4rpx;
+  right: 24rpx;
+  font-size: 20rpx;
+  color: #99a9bf;
+}
+
+.outsideBox {
+  /* padding: 0 30rpx; */
+  position: relative;
+  background: #fafafa;
+  border-radius: 0 0 8rpx 8rpx;
+  /* padding-top: 46rpx; */
+  padding: 46rpx 30rpx 34rpx 30rpx;
+}
+
+.applyMyProject .userPosition {
+  font-size: 28rpx;
+  color: #666;
+  line-height: 28rpx;
+  text-align: left;
+  margin-right: 16rpx;
+}
+
+.introduceBox {
+  margin-bottom: 16rpx;
+  align-items: flex-end;
+}
+
+.introduceBox .userName {
+  font-size: 36rpx;
+  color: #333;
+  line-height: 36rpx;
+  text-align: left;
+  margin-right: 16rpx;
+  align-items: flex-end;
+}
+
+.applyMyProject .userPart {
+  font-size: 20rpx;
+  color: #d3b987;
+  line-height: 20rpx;
+  text-align: left;
+}
+
+.applyMyProject .userCompany {
+  font-size: 24rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  margin-bottom: 84rpx;
+}
+
+.investmentGroup {
+  font-size: 26rpx;
+  color: #999;
+  line-height: 26rpx;
+  text-align: left;
+  margin-bottom: 24rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.roundGroup {
+  margin-bottom: none;
+  font-size: 26rpx;
+  color: #999;
+  line-height: 26rpx;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.iconStyle {
+  width: 24rpx;
+  height: 26rpx;
+  border-radius: 100%;
+}
+
+.renzheng {
+  width: 24rpx;
+  height: 24rpx;
+  margin-right: 4rpx;
+}
+
+.userPart1 {
+  margin-top: 4rpx;
+}
+
+.connection {
+  width: 68rpx;
+  height: 68rpx;
+  position: absolute;
+  right: -2rpx;
+  top: -2rpx;
+}
+
+.userPic {
+  width: 104rpx;
+  height: 104rpx;
+  border-radius: 100%;
+  position: absolute;
+  right: 32rpx;
+  top: 32rpx;
+}
+
+.user_text {
+  background: #f2f2f2;
+  line-height: 104rpx;
+  text-align: center;
+  font-size: 40rpx;
+  width: 104rpx;
+  height: 104rpx;
+  border-radius: 100%;
+  position: absolute;
+  right: 32rpx;
+  top: 32rpx;
+}
+
+.noData {
+  width: 144rpx;
+  height: 88rpx;
+  margin-bottom: 38rpx;
+  /* margin-top:344rpx; */
+}
+
+/*同意查看或不同意查看或申请中  */
+
+.hightLight {
+  color: #40587a;
+}
+
+.noLight {
+  color: #999;
+}
+
+.investmentGroupContent, .roundGroupContent {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.hide {
+  display: none;
+}
+
+.aLine {
+  border-top: 1rpx solid #e6e6e6;
+  margin: 24rpx 0 28rpx 0;
+}
+/*移除和推送项目 按钮  */
+
+.btnContent{
+font-size:28rpx;
+color:#40587a;
+line-height:28rpx;
+text-align:left;
+}
+.btnContent1{
+  padding-right:120rpx;
+  border-right:1rpx solid #e6e6e6;
+}
+.pushProject{
+  height:28rpx;
+  width:28rpx;
+  margin-right:18rpx;
+}
+.pushProject1{
+margin-left:90rpx;
+}
+.pushProject2{
+margin-left: 92rpx;
+}
